[project]
name = "codebasics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.2",
    "langsmith>=0.4.39",
    "notebook>=7.4.7",
    "python-dotenv>=1.2.1",
]
